--- a/index.html
+++ b/index.html
@@ -20,18 +20,26 @@
 
     <h1>Welcome to Spartans Unfiltered!</h1>
 
-    <p class="lead">The question is:</p>
+    <p class="lead">
+      Here’s a question prompt. Discuss it, reflect, or skip it—then tap
+      Next Question when you want a new one.
+    </p>
 
-    <p id="question" class="question">Loading question…</p>
+    <p id="question" class="question">
+      Loading question…
+    </p>
 
     <div class="button-stack">
-  <button id="nextBtn">Next Question</button>
+      <button id="nextBtn">Next Question</button>
 
-  <button id="refreshBtn" class="secondary">
-    Refresh Questions
-  </button>
-</div>
+      <p class="lead refresh-hint">
+        To load a new set of questions (if available), tap “Refresh Questions”.
+      </p>
 
+      <button id="refreshBtn" class="secondary">
+        Refresh Questions
+      </button>
+    </div>
   </div>
 
   <script src="app.js"></script>
